--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <div id="container"></div>
     <script src="/static/bundle.js"></script>
+    <!--<script src="build/bundle.js"></script>-->
 </body>
 </html>
